--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,19 +1,13 @@
+@import "./variables";
+
 .content {
   width: 100vw;
   height: auto;
 }
 
-.logo {
-  width: 200px;
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 100;
-}
 .phone {
   text-decoration: none;
-  color: white;
+  color: $white;
   font-size: 1.5rem;
   cursor: pointer;
 }
@@ -25,28 +19,32 @@
   position: absolute;
   justify-content: space-around;
   flex-wrap: wrap;
-  top: 40%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%);
 }
 .hermLocation,
 .madLocation {
+  background-color: #0f1417;
+  opacity: 0.8;
   text-align: center;
   z-index: 100;
-  border: 1px solid rgb(255, 255, 255);
-  padding: 5px;
+  border: 1px solid $blue;
+  padding: 20px;
   margin: 5px;
   width: 300px;
   height: 300px;
-  border-radius: 2px;
+  border-radius: 4px;
 }
 .location {
-  color: white;
-  font-family: "Montserrat", sans-serif;
-  font-size: 2rem;
+  color: #dcdae8;
+  border-bottom: 0.5px solid $pink;
+  font-family: $primary-font;
+  letter-spacing: 3px;
+  font-size: 1.8rem;
 }
 p {
   color: white;
-  font-family: "Montserrat", sans-serif;
+  font-family: $secondary-font;
   text-align: center;
 }
