added routing and all pages

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,8 +5,7 @@ body {
   height: 100%;
   background-color: #0f1417;
   background-image: url("../src/assets/wild-vibes-1RnPg7tET_s-unsplash.jpg");
-  background-size: 50vh;
-  background-position-x: left;
-  background-position-y: 300px;
+  background-size: 80vmax;
+  background-position: right top;
   background-repeat: no-repeat;
 }
