--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -5,16 +5,18 @@
   align-items: center;
   list-style: none;
   padding: 0;
-  & li {
+  & .li {
     color: $white;
     font-size: 2.5vmin;
     margin: 0 auto;
     font-family: $primary-font;
+    text-decoration: none;
+    letter-spacing: 2px;
     &:hover {
       color: $pink;
       border-bottom: 1px solid $blue;
       transition: 0.2s ease;
-      transform: scale(1.03);
+      transform: scale(1.05);
       cursor: pointer;
     }
   }
