added more components to homepage

--- a/src/styles/locations.scss
+++ b/src/styles/locations.scss
@@ -29,12 +29,13 @@
   opacity: 0.8;
   text-align: center;
   z-index: 100;
-  border: 1px solid $blue;
+  // border: 1px solid $blue;
+  box-shadow: 0px 1px 20px -3px $blue;
   padding: 20px;
   margin: 5px;
   width: 300px;
   height: 300px;
-  border-radius: 4px;
+  border-radius: 2px;
 }
 .location {
   color: #dcdae8;
