--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,10 +1,34 @@
 @import "./variables";
-.homeStatement {
-  font-family: $primary-font;
-  color: $white;
-  text-align: right;
+
+.homeContainer {
   position: absolute;
   right: 10%;
   top: 20%;
-  width: 200px;
+  width: 240px;
+  & .findUsBtn {
+    width: 100%;
+    box-shadow: 0px 1px 20px -3px $pink;
+    padding: 15px;
+    background-color: transparent;
+    border: 1px solid $pink;
+    border-radius: 4px;
+    color: $blue;
+    font-family: $primary-font;
+    letter-spacing: 3px;
+    margin-top: 20px;
+  }
+}
+
+.homeStatement {
+  font-size: 1.8em;
+  font-family: $primary-font;
+  color: $white;
+  text-align: right;
+  width: 100%;
+}
+.homeBlurb {
+  width: 100%;
+  font-family: $secondary-font;
+  letter-spacing: 2px;
+  text-align: right;
 }
