--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -4,7 +4,7 @@
   position: absolute;
   right: 10%;
   top: 20%;
-  width: 240px;
+  width: 230px;
   & .findUsBtn {
     width: 100%;
     box-shadow: 0px 1px 20px -3px $pink;
@@ -16,6 +16,13 @@
     font-family: $primary-font;
     letter-spacing: 3px;
     margin-top: 20px;
+    cursor: pointer;
+    &:hover {
+      transform: scale(1.05);
+      transition: 200ms ease;
+      box-shadow: 0px 1px 20px 2px $pink;
+      border: none;
+    }
   }
 }
 
@@ -31,4 +38,14 @@
   font-family: $secondary-font;
   letter-spacing: 2px;
   text-align: right;
+}
+
+@media only screen and (min-width: 1200px) {
+  .homeContainer {
+    position: absolute;
+    right: 30%;
+    top: 30%;
+    width: 40vmin;
+    text-align: center;
+  }
 }
