--- a/src/styles/locations.scss
+++ b/src/styles/locations.scss
@@ -5,12 +5,6 @@
   height: auto;
 }
 
-.phone {
-  text-decoration: none;
-  color: $white;
-  font-size: 1.5rem;
-  cursor: pointer;
-}
 .cards {
   width: 90vw;
   height: auto;
@@ -29,12 +23,11 @@
   opacity: 0.8;
   text-align: center;
   z-index: 100;
-  // border: 1px solid $blue;
   box-shadow: 0px 1px 20px -3px $blue;
   padding: 20px;
   margin: 5px;
-  width: 300px;
-  height: 300px;
+  width: 80vw;
+  height: auto;
   border-radius: 2px;
 }
 .location {
@@ -42,10 +35,37 @@
   border-bottom: 0.5px solid $pink;
   font-family: $primary-font;
   letter-spacing: 3px;
-  font-size: 1.8rem;
+  text-align: center;
+  margin-bottom: 30px;
 }
+
+h3,
 p {
   color: white;
   font-family: $secondary-font;
   text-align: center;
+}
+h3 {
+  text-decoration: underline $blue;
+  &:last-child {
+    border: none;
+  }
+}
+
+.phoneContainer {
+  margin-top: 50px;
+}
+.phone {
+  font-family: $primary-font;
+  text-decoration: none;
+  color: $white;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 600px) {
+  .hermLocation,
+  .madLocation {
+    width: 30vw;
+  }
 }
